syntax = "proto3";

option csharp_namespace = "ChatApp.API.Protos";

service ProfileService{
	rpc GetProfileByID (RequestByID) returns (ProfileProto);
}

message RequestByID{
	int64 id = 1;
}

enum Gender {
	GENDER_UNSPECIFIED = 0;
	MALE = 1;
	FEMALE = 2;
	OTHER = 3;
}

message ProfileProto{
	int64 user_id = 1;
	string first_name = 2;
	string last_name = 3;
	// FullName là trường suy ra từ first_name + last_name.
	// Bạn có thể bỏ qua trong wire (tính ở server/ client),
	// hoặc vẫn gửi xuống nếu muốn hiển thị nhanh.
	string full_name = 4;
	string avatar = 5;
	// DateTime? -> dùng Timestamp và cho phép vắng mặt (optional)
	DateTime? date_of_birth = 6;
	string phone = 7;
	string email = 8;
	Gender gender = 9; 
	string bio = 10;
}
